--- a/.github/workflows/clasifica.yaml
+++ b/.github/workflows/clasifica.yaml
@@ -3,7 +3,7 @@ name: Clasificación diaria REMPE
 on:
   schedule:
     - cron: '0 3 * * *'  # Todos los días a las 03:00 UTC
-  workflow_dispatch:     # Permite lanzarlo manualmente
+  workflow_dispatch:
 
 jobs:
   ejecutar-script:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Clonar el repositorio
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2  # Usa también v2 aquí
 
       - name: Instalar R
         uses: r-lib/actions/setup-r@v2
@@ -29,7 +29,7 @@ jobs:
           Rscript script_clasifica.R
 
       - name: Guardar archivo como artefacto
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: resultado-clasificacion
           path: resultado_clasificacion.csv
