--- a/.github/workflows/clasifica.yaml
+++ b/.github/workflows/clasifica.yaml
@@ -3,7 +3,7 @@ name: Clasificación diaria REMPE
 on:
   schedule:
     - cron: '0 3 * * *'  # Todos los días a las 03:00 UTC
-  workflow_dispatch:
+  workflow_dispatch:     # Permite lanzarlo manualmente
 
 jobs:
   ejecutar-script:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Clonar el repositorio
-        uses: actions/checkout@v2  # Usa también v2 aquí
+        uses: actions/checkout@v3
 
       - name: Instalar R
         uses: r-lib/actions/setup-r@v2
@@ -28,8 +28,11 @@ jobs:
         run: |
           Rscript script_clasifica.R
 
-      - name: Guardar archivo como artefacto
-        uses: actions/upload-artifact@v2
-        with:
-          name: resultado-clasificacion
-          path: resultado_clasificacion.csv
+      - name: Commit del archivo resultado
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add resultado_clasificacion.csv
+          git commit -m "Auto: resultado actualizado [skip ci]" || echo "Sin cambios"
+          git push
+
